fix: scrollbar visible on x-axis of github-contri graph

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -149,6 +149,12 @@
   }
 }
 
+@layer utilities {
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 ::selection {
   background: #27272a;
   color: white;
